packages/win32/src/kernel32.g.h

MYLIB_EXPORT Win32Result SetEvent_Wrapper(HANDLE hEvent);
MYLIB_EXPORT Win32Result SetFileAttributesW_Wrapper(PCWSTR lpFileName, DWORD dwFileAttributes);
MYLIB_EXPORT Win32Result SetFileInformationByHandle_Wrapper(HANDLE hFile, LONG fileInformationClass, void* lpFileInformation, unsigned long dwBufferSize);
MYLIB_EXPORT Win32Result SetFileIoOverlappedRange_Wrapper(HANDLE fileHandle, unsigned char* overlappedRangeStart, unsigned long length);
MYLIB_EXPORT Win32Result SetFilePointer_Wrapper(HANDLE hFile, int lDistanceToMove, int* lpDistanceToMoveHigh, DWORD dwMoveMethod);
MYLIB_EXPORT Win32Result SetFilePointerEx_Wrapper(HANDLE hFile, LARGE_INTEGER liDistanceToMove, long long* lpNewFilePointer, DWORD dwMoveMethod);
MYLIB_EXPORT Win32Result SetFileShortNameW_Wrapper(HANDLE hFile, PCWSTR lpShortName);
MYLIB_EXPORT Win32Result SetFileTime_Wrapper(HANDLE hFile, FILETIME* lpCreationTime, FILETIME* lpLastAccessTime, FILETIME* lpLastWriteTime);
MYLIB_EXPORT Win32Result SetFileValidData_Wrapper(HANDLE hFile, long long validDataLength);
MYLIB_EXPORT Win32Result SetFirmwareEnvironmentVariableW_Wrapper(PCWSTR lpName, PCWSTR lpGuid, void* pValue, unsigned long nSize);
MYLIB_EXPORT Win32Result SetFirmwareEnvironmentVariableExW_Wrapper(PCWSTR lpName, PCWSTR lpGuid, void* pValue, unsigned long nSize, unsigned long dwAttributes);
MYLIB_EXPORT Win32Result SetHandleInformation_Wrapper(HANDLE hObject, unsigned long dwMask, DWORD dwFlags);
MYLIB_EXPORT Win32Result SetInformationJobObject_Wrapper(HANDLE hJob, LONG jobObjectInformationClass, void* lpJobObjectInformation, unsigned long cbJobObjectInformationLength);
MYLIB_EXPORT Win32Result SetIoRateControlInformationJobObject_Wrapper(HANDLE hJob, JOBOBJECT_IO_RATE_CONTROL_INFORMATION* ioRateControlInfo);
MYLIB_EXPORT Win32Result SetNamedPipeHandleState_Wrapper(HANDLE hNamedPipe, DWORD* lpMode, unsigned long* lpMaxCollectionCount, unsigned long* lpCollectDataTimeout);
MYLIB_EXPORT Win32Result SetProcessAffinityMask_Wrapper(HANDLE hProcess, unsigned long long dwProcessAffinityMask);
MYLIB_EXPORT Win32Result SetProcessPriorityBoost_Wrapper(HANDLE hProcess, BOOL bDisablePriorityBoost);
MYLIB_EXPORT Win32Result SetProcessWorkingSetSize_Wrapper(HANDLE hProcess, unsigned long long dwMinimumWorkingSetSize, unsigned long long dwMaximumWorkingSetSize);
MYLIB_EXPORT Win32Result SetStdHandle_Wrapper(DWORD nStdHandle, HANDLE hHandle);
MYLIB_EXPORT Win32Result SetThreadAffinityMask_Wrapper(HANDLE hThread, unsigned long long dwThreadAffinityMask);
MYLIB_EXPORT Win32Result SetThreadErrorMode_Wrapper(DWORD dwNewMode, DWORD* lpOldMode);
MYLIB_EXPORT Win32Result SetThreadUILanguage_Wrapper(unsigned short langId);
MYLIB_EXPORT Win32Result SetupComm_Wrapper(HANDLE hFile, unsigned long dwInQueue, unsigned long dwOutQueue);
MYLIB_EXPORT Win32Result SetVolumeLabelW_Wrapper(PCWSTR lpRootPathName, PCWSTR lpVolumeName);
MYLIB_EXPORT Win32Result SizeofResource_Wrapper(HMODULE hModule, HRSRC hResInfo);
MYLIB_EXPORT Win32Result SystemTimeToFileTime_Wrapper(SYSTEMTIME* lpSystemTime, FILETIME* lpFileTime);
MYLIB_EXPORT Win32Result TerminateJobObject_Wrapper(HANDLE hJob, unsigned long uExitCode);
MYLIB_EXPORT Win32Result TerminateProcess_Wrapper(HANDLE hProcess, unsigned long uExitCode);
MYLIB_EXPORT Win32Result TerminateThread_Wrapper(HANDLE hThread, unsigned long dwExitCode);
MYLIB_EXPORT Win32Result TransactNamedPipe_Wrapper(HANDLE hNamedPipe, void* lpInBuffer, unsigned long nInBufferSize, void* lpOutBuffer, unsigned long nOutBufferSize, unsigned long* lpBytesRead, OVERLAPPED* lpOverlapped);
MYLIB_EXPORT Win32Result TransmitCommChar_Wrapper(HANDLE hFile, CHAR cChar);
MYLIB_EXPORT Win32Result UnlockFile_Wrapper(HANDLE hFile, unsigned long dwFileOffsetLow, unsigned long dwFileOffsetHigh, unsigned long nNumberOfBytesToUnlockLow, unsigned long nNumberOfBytesToUnlockHigh);
MYLIB_EXPORT Win32Result UnlockFileEx_Wrapper(HANDLE hFile, unsigned long dwReserved, unsigned long nNumberOfBytesToUnlockLow, unsigned long nNumberOfBytesToUnlockHigh, OVERLAPPED* lpOverlapped);
MYLIB_EXPORT Win32Result UpdateProcThreadAttribute_Wrapper(LPPROC_THREAD_ATTRIBUTE_LIST lpAttributeList, unsigned long dwFlags, unsigned long long attribute, void* lpValue, unsigned long long cbSize, void* lpPreviousValue, unsigned long long* lpReturnSize);
MYLIB_EXPORT Win32Result UpdateResourceW_Wrapper(HANDLE hUpdate, PCWSTR lpType, PCWSTR lpName, unsigned short wLanguage, void* lpData, unsigned long cb);
MYLIB_EXPORT Win32Result VerifyVersionInfoW_Wrapper(OSVERSIONINFOEXW* lpVersionInformation, DWORD dwTypeMask, unsigned long long dwlConditionMask);
MYLIB_EXPORT Win32Result VirtualAlloc_Wrapper(void* lpAddress, unsigned long long dwSize, DWORD flAllocationType, DWORD flProtect);
MYLIB_EXPORT Win32Result VirtualAllocEx_Wrapper(HANDLE hProcess, void* lpAddress, unsigned long long dwSize, DWORD flAllocationType, DWORD flProtect);
MYLIB_EXPORT Win32Result VirtualFree_Wrapper(void* lpAddress, unsigned long long dwSize, DWORD dwFreeType);
MYLIB_EXPORT Win32Result VirtualFreeEx_Wrapper(HANDLE hProcess, void* lpAddress, unsigned long long dwSize, DWORD dwFreeType);
MYLIB_EXPORT Win32Result VirtualLock_Wrapper(void* lpAddress, unsigned long long dwSize);
MYLIB_EXPORT Win32Result VirtualProtect_Wrapper(void* lpAddress, unsigned long long dwSize, DWORD flNewProtect, DWORD* lpflOldProtect);
MYLIB_EXPORT Win32Result VirtualProtectEx_Wrapper(HANDLE hProcess, void* lpAddress, unsigned long long dwSize, DWORD flNewProtect, DWORD* lpflOldProtect);
MYLIB_EXPORT Win32Result VirtualQuery_Wrapper(void* lpAddress, MEMORY_BASIC_INFORMATION* lpBuffer, unsigned long long dwLength);
MYLIB_EXPORT Win32Result VirtualQueryEx_Wrapper(HANDLE hProcess, void* lpAddress, MEMORY_BASIC_INFORMATION* lpBuffer, unsigned long long dwLength);
MYLIB_EXPORT Win32Result VirtualUnlock_Wrapper(void* lpAddress, unsigned long long dwSize);
MYLIB_EXPORT Win32Result WaitCommEvent_Wrapper(HANDLE hFile, DWORD* lpEvtMask, OVERLAPPED* lpOverlapped);
MYLIB_EXPORT Win32Result WaitForSingleObject_Wrapper(HANDLE hHandle, unsigned long dwMilliseconds);
MYLIB_EXPORT Win32Result WideCharToMultiByte_Wrapper(unsigned long codePage, unsigned long dwFlags, PCWSTR lpWideCharStr, int cchWideChar, PSTR lpMultiByteStr, int cbMultiByte, PCSTR lpDefaultChar, BOOL* lpUsedDefaultChar);
MYLIB_EXPORT Win32Result Wow64SuspendThread_Wrapper(HANDLE hThread);
MYLIB_EXPORT Win32Result WriteConsoleW_Wrapper(HANDLE hConsoleOutput, PCWSTR lpBuffer, unsigned long nNumberOfCharsToWrite, unsigned long* lpNumberOfCharsWritten, void* lpReserved);
MYLIB_EXPORT Win32Result WriteFile_Wrapper(HANDLE hFile, unsigned char* lpBuffer, unsigned long nNumberOfBytesToWrite, unsigned long* lpNumberOfBytesWritten, OVERLAPPED* lpOverlapped);
MYLIB_EXPORT Win32Result WriteFileEx_Wrapper(HANDLE hFile, unsigned char* lpBuffer, unsigned long nNumberOfBytesToWrite, OVERLAPPED* lpOverlapped, LPOVERLAPPED_COMPLETION_ROUTINE lpCompletionRoutine);