packages/win32/lib/src/_internal/kernel32.g.dart


@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result SetEvent_Wrapper(int hEvent);

@internal
@Native<NativeWin32Result Function(PCWSTR, Uint32)>()
external NativeWin32Result SetFileAttributesW_Wrapper(
  PCWSTR lpFileName,
  int dwFileAttributes,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Int32, Pointer, Uint32)>()
external NativeWin32Result SetFileInformationByHandle_Wrapper(
  int hFile,
  int fileInformationClass,
  Pointer lpFileInformation,
  int dwBufferSize,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<Uint8>, Uint32)>()
external NativeWin32Result SetFileIoOverlappedRange_Wrapper(
  int fileHandle,
  Pointer<Uint8> overlappedRangeStart,
  int length,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Int32, Pointer<Int32>, Uint32)>()
external NativeWin32Result SetFilePointer_Wrapper(
  int hFile,
  int lDistanceToMove,
  Pointer<Int32> lpDistanceToMoveHigh,
  int dwMoveMethod,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Int64, Pointer<Int64>, Uint32)>()
external NativeWin32Result SetFilePointerEx_Wrapper(
  int hFile,
  int liDistanceToMove,
  Pointer<Int64> lpNewFilePointer,
  int dwMoveMethod,
);

@internal
@Native<NativeWin32Result Function(HANDLE, PCWSTR)>()
external NativeWin32Result SetFileShortNameW_Wrapper(
  int hFile,
  PCWSTR lpShortName,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<FILETIME>,
    Pointer<FILETIME>,
    Pointer<FILETIME>,
  )
>()
external NativeWin32Result SetFileTime_Wrapper(
  int hFile,
  Pointer<FILETIME> lpCreationTime,
  Pointer<FILETIME> lpLastAccessTime,
  Pointer<FILETIME> lpLastWriteTime,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Int64)>()
external NativeWin32Result SetFileValidData_Wrapper(
  int hFile,
  int validDataLength,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, PCWSTR, Pointer, Uint32)>()
external NativeWin32Result SetFirmwareEnvironmentVariableW_Wrapper(
  PCWSTR lpName,
  PCWSTR lpGuid,
  Pointer pValue,
  int nSize,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, PCWSTR, Pointer, Uint32, Uint32)>()
external NativeWin32Result SetFirmwareEnvironmentVariableExW_Wrapper(
  PCWSTR lpName,
  PCWSTR lpGuid,
  Pointer pValue,
  int nSize,
  int dwAttributes,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32, Uint32)>()
external NativeWin32Result SetHandleInformation_Wrapper(
  int hObject,
  int dwMask,
  int dwFlags,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Int32, Pointer, Uint32)>()
external NativeWin32Result SetInformationJobObject_Wrapper(
  int hJob,
  int jobObjectInformationClass,
  Pointer lpJobObjectInformation,
  int cbJobObjectInformationLength,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<JOBOBJECT_IO_RATE_CONTROL_INFORMATION>,
  )
>()
external NativeWin32Result SetIoRateControlInformationJobObject_Wrapper(
  int hJob,
  Pointer<JOBOBJECT_IO_RATE_CONTROL_INFORMATION> ioRateControlInfo,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<Uint32>,
    Pointer<Uint32>,
    Pointer<Uint32>,
  )
>()
external NativeWin32Result SetNamedPipeHandleState_Wrapper(
  int hNamedPipe,
  Pointer<Uint32> lpMode,
  Pointer<Uint32> lpMaxCollectionCount,
  Pointer<Uint32> lpCollectDataTimeout,
);

@internal
@Native<NativeWin32Result Function(HANDLE, IntPtr)>()
external NativeWin32Result SetProcessAffinityMask_Wrapper(
  int hProcess,
  int dwProcessAffinityMask,
);

@internal
@Native<NativeWin32Result Function(HANDLE, BOOL)>()
external NativeWin32Result SetProcessPriorityBoost_Wrapper(
  int hProcess,
  int bDisablePriorityBoost,
);

@internal
@Native<NativeWin32Result Function(HANDLE, IntPtr, IntPtr)>()
external NativeWin32Result SetProcessWorkingSetSize_Wrapper(
  int hProcess,
  int dwMinimumWorkingSetSize,
  int dwMaximumWorkingSetSize,
);

@internal
@Native<NativeWin32Result Function(Uint32, HANDLE)>()
external NativeWin32Result SetStdHandle_Wrapper(int nStdHandle, int hHandle);

@internal
@Native<NativeWin32Result Function(HANDLE, IntPtr)>()
external NativeWin32Result SetThreadAffinityMask_Wrapper(
  int hThread,
  int dwThreadAffinityMask,
);

@internal
@Native<NativeWin32Result Function(Uint32, Pointer<Uint32>)>()
external NativeWin32Result SetThreadErrorMode_Wrapper(
  int dwNewMode,
  Pointer<Uint32> lpOldMode,
);

@internal
@Native<NativeWin32Result Function(Uint16)>()
external NativeWin32Result SetThreadUILanguage_Wrapper(int langId);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32, Uint32)>()
external NativeWin32Result SetupComm_Wrapper(
  int hFile,
  int dwInQueue,
  int dwOutQueue,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, PCWSTR)>()
external NativeWin32Result SetVolumeLabelW_Wrapper(
  PCWSTR lpRootPathName,
  PCWSTR lpVolumeName,
);

@internal
@Native<NativeWin32Result Function(HMODULE, HRSRC)>()
external NativeWin32Result SizeofResource_Wrapper(int hModule, int hResInfo);

@internal
@Native<NativeWin32Result Function(Pointer<SYSTEMTIME>, Pointer<FILETIME>)>()
external NativeWin32Result SystemTimeToFileTime_Wrapper(
  Pointer<SYSTEMTIME> lpSystemTime,
  Pointer<FILETIME> lpFileTime,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32)>()
external NativeWin32Result TerminateJobObject_Wrapper(int hJob, int uExitCode);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32)>()
external NativeWin32Result TerminateProcess_Wrapper(
  int hProcess,
  int uExitCode,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32)>()
external NativeWin32Result TerminateThread_Wrapper(int hThread, int dwExitCode);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer,
    Uint32,
    Pointer,
    Uint32,
    Pointer<Uint32>,
    Pointer<OVERLAPPED>,
  )
>()
external NativeWin32Result TransactNamedPipe_Wrapper(
  int hNamedPipe,
  Pointer lpInBuffer,
  int nInBufferSize,
  Pointer lpOutBuffer,
  int nOutBufferSize,
  Pointer<Uint32> lpBytesRead,
  Pointer<OVERLAPPED> lpOverlapped,
);

@internal
@Native<NativeWin32Result Function(HANDLE, CHAR)>()
external NativeWin32Result TransmitCommChar_Wrapper(int hFile, int cChar);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32, Uint32, Uint32, Uint32)>()
external NativeWin32Result UnlockFile_Wrapper(
  int hFile,
  int dwFileOffsetLow,
  int dwFileOffsetHigh,
  int nNumberOfBytesToUnlockLow,
  int nNumberOfBytesToUnlockHigh,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Uint32,
    Uint32,
    Uint32,
    Pointer<OVERLAPPED>,
  )
>()
external NativeWin32Result UnlockFileEx_Wrapper(
  int hFile,
  int dwReserved,
  int nNumberOfBytesToUnlockLow,
  int nNumberOfBytesToUnlockHigh,
  Pointer<OVERLAPPED> lpOverlapped,
);

@internal
@Native<
  NativeWin32Result Function(
    LPPROC_THREAD_ATTRIBUTE_LIST,
    Uint32,
    IntPtr,
    Pointer,
    IntPtr,
    Pointer,
    Pointer<IntPtr>,
  )
>()
external NativeWin32Result UpdateProcThreadAttribute_Wrapper(
  int lpAttributeList,
  int dwFlags,
  int attribute,
  Pointer lpValue,
  int cbSize,
  Pointer lpPreviousValue,
  Pointer<IntPtr> lpReturnSize,
);

@internal
@Native<
  NativeWin32Result Function(HANDLE, PCWSTR, PCWSTR, Uint16, Pointer, Uint32)
>()
external NativeWin32Result UpdateResourceW_Wrapper(
  int hUpdate,
  PCWSTR lpType,
  PCWSTR lpName,
  int wLanguage,
  Pointer lpData,
  int cb,
);

@internal
@Native<NativeWin32Result Function(Pointer<OSVERSIONINFOEX>, Uint32, Uint64)>()
external NativeWin32Result VerifyVersionInfoW_Wrapper(
  Pointer<OSVERSIONINFOEX> lpVersionInformation,
  int dwTypeMask,
  int dwlConditionMask,
);

@internal
@Native<NativeWin32Result Function(Pointer, IntPtr, Uint32, Uint32)>()
external NativeWin32Result VirtualAlloc_Wrapper(
  Pointer lpAddress,
  int dwSize,
  int flAllocationType,
  int flProtect,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer, IntPtr, Uint32, Uint32)>()
external NativeWin32Result VirtualAllocEx_Wrapper(
  int hProcess,
  Pointer lpAddress,
  int dwSize,
  int flAllocationType,
  int flProtect,
);

@internal
@Native<NativeWin32Result Function(Pointer, IntPtr, Uint32)>()
external NativeWin32Result VirtualFree_Wrapper(
  Pointer lpAddress,
  int dwSize,
  int dwFreeType,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer, IntPtr, Uint32)>()
external NativeWin32Result VirtualFreeEx_Wrapper(
  int hProcess,
  Pointer lpAddress,
  int dwSize,
  int dwFreeType,
);

@internal
@Native<NativeWin32Result Function(Pointer, IntPtr)>()
external NativeWin32Result VirtualLock_Wrapper(Pointer lpAddress, int dwSize);

@internal
@Native<NativeWin32Result Function(Pointer, IntPtr, Uint32, Pointer<Uint32>)>()
external NativeWin32Result VirtualProtect_Wrapper(
  Pointer lpAddress,
  int dwSize,
  int flNewProtect,
  Pointer<Uint32> lpflOldProtect,
);

@internal
@Native<
  NativeWin32Result Function(HANDLE, Pointer, IntPtr, Uint32, Pointer<Uint32>)
>()
external NativeWin32Result VirtualProtectEx_Wrapper(
  int hProcess,
  Pointer lpAddress,
  int dwSize,
  int flNewProtect,
  Pointer<Uint32> lpflOldProtect,
);

@internal
@Native<
  NativeWin32Result Function(Pointer, Pointer<MEMORY_BASIC_INFORMATION>, IntPtr)
>()
external NativeWin32Result VirtualQuery_Wrapper(
  Pointer lpAddress,
  Pointer<MEMORY_BASIC_INFORMATION> lpBuffer,
  int dwLength,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer,
    Pointer<MEMORY_BASIC_INFORMATION>,
    IntPtr,
  )
>()
external NativeWin32Result VirtualQueryEx_Wrapper(
  int hProcess,
  Pointer lpAddress,
  Pointer<MEMORY_BASIC_INFORMATION> lpBuffer,
  int dwLength,
);

@internal
@Native<NativeWin32Result Function(Pointer, IntPtr)>()
external NativeWin32Result VirtualUnlock_Wrapper(Pointer lpAddress, int dwSize);

@internal
@Native<
  NativeWin32Result Function(HANDLE, Pointer<Uint32>, Pointer<OVERLAPPED>)
>()
external NativeWin32Result WaitCommEvent_Wrapper(
  int hFile,
  Pointer<Uint32> lpEvtMask,
  Pointer<OVERLAPPED> lpOverlapped,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32)>()
external NativeWin32Result WaitForSingleObject_Wrapper(
  int hHandle,
  int dwMilliseconds,
);

@internal
@Native<
  NativeWin32Result Function(
    Uint32,
    Uint32,
    PCWSTR,
    Int32,
    PSTR,
    Int32,
    PCSTR,
    Pointer<BOOL>,
  )
>()
external NativeWin32Result WideCharToMultiByte_Wrapper(
  int codePage,
  int dwFlags,
  PCWSTR lpWideCharStr,
  int cchWideChar,
  PSTR lpMultiByteStr,
  int cbMultiByte,
  PCSTR lpDefaultChar,
  Pointer<BOOL> lpUsedDefaultChar,
);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result Wow64SuspendThread_Wrapper(int hThread);

@internal
@Native<
  NativeWin32Result Function(HANDLE, PCWSTR, Uint32, Pointer<Uint32>, Pointer)
>()
external NativeWin32Result WriteConsoleW_Wrapper(
  int hConsoleOutput,
  PCWSTR lpBuffer,
  int nNumberOfCharsToWrite,
  Pointer<Uint32> lpNumberOfCharsWritten,
  Pointer lpReserved,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<Uint8>,
    Uint32,
    Pointer<Uint32>,
    Pointer<OVERLAPPED>,
  )
>()
external NativeWin32Result WriteFile_Wrapper(
  int hFile,
  Pointer<Uint8> lpBuffer,
  int nNumberOfBytesToWrite,
  Pointer<Uint32> lpNumberOfBytesWritten,
  Pointer<OVERLAPPED> lpOverlapped,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<Uint8>,
    Uint32,
    Pointer<OVERLAPPED>,
    Pointer<NativeFunction<LPOVERLAPPED_COMPLETION_ROUTINE>>,
  )
>()
external NativeWin32Result WriteFileEx_Wrapper(
  int hFile,
  Pointer<Uint8> lpBuffer,
  int nNumberOfBytesToWrite,
  Pointer<OVERLAPPED> lpOverlapped,
  Pointer<NativeFunction<LPOVERLAPPED_COMPLETION_ROUTINE>> lpCompletionRoutine,
);
